--- a/index.htm
+++ b/index.htm
@@ -124,12 +124,16 @@
     <script src="modules/contacts/filters/age.filter.js"></script>
     <script src="modules/contacts/filters/born.filter.js"></script>
     <script src="modules/contacts/directives/contact-image.directive.js"></script>
-    <script src="modules/contacts/directives/contact-info.directive.js"></script>
     <script src="modules/contacts/directives/contact-tags.directive.js"></script>
     <script src="modules/contacts/addContact.controller.js"></script>
-    <script src="modules/contacts/detail.controller.js"></script>
     <script src="modules/contacts/contacts.controller.js"></script>
     <script src="modules/contacts/viewContact.controller.js"></script>
+
+    <!-- Details Module -->
+    <script src="modules/details/detail.service.js"></script>
+    <script src="modules/details/basic-details.directive.js"></script>
+    <script src="modules/details/group-details.directive.js"></script>
+    <script src="modules/details/detail.controller.js"></script>
 
     <!-- Events Module -->
     <script src="modules/events/event.service.js"></script>
