Match HTML Labels
For attribute value should match id value

--- a/modules/groups/group-modal.htm
+++ b/modules/groups/group-modal.htm
@@ -8,7 +8,7 @@
 </div>
 <div class="modal-body">
     <div class='form-group'>
-        <label for='InInfo'>Organization</label>
+        <label for='InOrg'>Organization</label>
         <input type='text' ng-model='modalOptions.group.org' id='InOrg' placeholder='Enter organization or group name'/>
     </div>
     <div class='form-group'>
@@ -16,27 +16,27 @@
         <input type='text' ng-model='modalOptions.group.type' id='InType' placeholder='Enter group type (home, work, lake)'/>
     </div>
     <div class='form-group'>
-        <label for='InInfo'>Relationship/title</label>
+        <label for='InRelation'>Relationship/title</label>
         <input type='text' ng-model='modalOptions.group.relation' id='InRelation' placeholder='Enter title (relationship with group)'/>
     </div>
     <div class='form-group'>
-        <label for='InInfo'>Street</label>
+        <label for='InStreet'>Street</label>
         <input type='text' ng-model='modalOptions.group.street' id='InStreet' placeholder='Enter street number and name'/>
     </div>
     <div class='form-group'>
-        <label for='InInfo'>City</label>
+        <label for='InCity'>City</label>
         <input type='text' ng-model='modalOptions.group.city' id='InCity' placeholder='Enter city name'/>
     </div>
     <div class='form-group'>
-        <label for='InInfo'>State/Province</label>
+        <label for='InState'>State/Province</label>
         <input type='text' ng-model='modalOptions.group.state' id='InState' placeholder='Enter state/province abbreviation'/>
     </div>
     <div class='form-group'>
-        <label for='InInfo'>Zip/Postal Code</label>
+        <label for='InZip'>Zip/Postal Code</label>
         <input type='text' ng-model='modalOptions.group.zip' id='InZip' placeholder='Enter zip/postal code'/>
     </div>
     <div class='form-group'>
-        <label for='InInfo'>Country</label>
+        <label for='InCountry'>Country</label>
         <input type='text' ng-model='modalOptions.group.country' id='InCountry' placeholder='Enter country (two character) code'/>
     </div>
 </div>
