Notes and Groups Module

--- a/index.htm
+++ b/index.htm
@@ -139,6 +139,9 @@
     <script src="modules/events/event.service.js"></script>
     <script src="modules/events/event.controller.js"></script>
 
+    <!-- Groups Module -->
+    <script src="modules/groups/group.service.js"></script>
+
     <!-- Layout Module -->
     <script src="modules/layout/navigation.controller.js"></script>
 
@@ -153,6 +156,9 @@
     <script src="modules/name-linking/directives/nl-google.directive.js"></script>
     <script src="modules/name-linking/directives/nl-linked-in.directive.js"></script>
     <script src="modules/name-linking/directives/nl-my-life.directive.js"></script>
+
+    <!-- Notes Module -->
+    <script src="modules/notes/note.service.js"></script>
 
     <!-- Angular Main App Module -->
     <script src='app.js'></script>
