Return Values from Note/Group Modal

--- a/modules/groups/group-modal.htm
+++ b/modules/groups/group-modal.htm
@@ -44,7 +44,7 @@
     <button type="button" class="btn" data-ng-click="modalOptions.close()">
         Cancel
     </button>
-    <button class="btn btn-primary" data-ng-click="modalOptions.ok(modalOptions.detail)">
+    <button class="btn btn-primary" data-ng-click="modalOptions.ok(modalOptions.group)">
         {{modalOptions.actionButtonText}}
     </button>
 </div>
