formatted group and contact modals

--- a/modules/groups/group-modal.htm
+++ b/modules/groups/group-modal.htm
@@ -1,50 +1,62 @@
 <style>
     label {width: 120px}
     div.form-group input {width: 90%}
+	input {padding-left: 2px}
 </style>
 
-<div class="modal-header">
-    <h3 ng-bind="modalOptions.title"></h3>
+<div class='modal-header'>
+    <h3 ng-bind='modalOptions.title'></h3>
 </div>
-<div class="modal-body">
+
+<div class='modal-body'>
     <div class='form-group'>
         <label for='InOrg'>Organization</label>
-        <input type='text' ng-model='modalOptions.group.org' id='InOrg' placeholder='Enter organization or group name'/>
+        <input type='text' ng-model='modalOptions.group.org' id='InOrg' placeholder=' organization or group name'/>
     </div>
     <div class='form-group'>
-        <label for='InType'>Type</label>
-        <input type='text' ng-model='modalOptions.group.type' id='InType' placeholder='Enter group type (home, work, lake)'/>
+		<div style='width:32%; display: inline-block'>
+			<label for='InType'>Type</label>
+			<input type='text' ng-model='modalOptions.group.type' id='InType' placeholder=' home, work, lake'/>
+		</div>
+		<div style='width:64%; display: inline-block'>
+			<label for='InRelation'>Relationship/title</label>
+			<input type='text' ng-model='modalOptions.group.relation' id='InRelation' placeholder=' title or group relationship'/>
+		</div>
     </div>
-    <div class='form-group'>
-        <label for='InRelation'>Relationship/title</label>
-        <input type='text' ng-model='modalOptions.group.relation' id='InRelation' placeholder='Enter title (relationship with group)'/>
-    </div>
+
     <div class='form-group'>
         <label for='InStreet'>Street</label>
-        <input type='text' ng-model='modalOptions.group.street' id='InStreet' placeholder='Enter street number and name'/>
+        <input type='text' ng-model='modalOptions.group.street' id='InStreet' placeholder=' street number and name'/>
     </div>
+
     <div class='form-group'>
         <label for='InCity'>City</label>
-        <input type='text' ng-model='modalOptions.group.city' id='InCity' placeholder='Enter city name'/>
+        <input type='text' ng-model='modalOptions.group.city' id='InCity' placeholder=' city name'/>
     </div>
+
     <div class='form-group'>
-        <label for='InState'>State/Province</label>
-        <input type='text' ng-model='modalOptions.group.state' id='InState' placeholder='Enter state/province abbreviation'/>
-    </div>
-    <div class='form-group'>
-        <label for='InZip'>Zip/Postal Code</label>
-        <input type='text' ng-model='modalOptions.group.zip' id='InZip' placeholder='Enter zip/postal code'/>
-    </div>
-    <div class='form-group'>
-        <label for='InCountry'>Country</label>
-        <input type='text' ng-model='modalOptions.group.country' id='InCountry' placeholder='Enter country (two character) code'/>
-    </div>
+		<div style='width:32%; display: inline-block'>
+			<label for='InState'>State/Province</label>
+			<input type='text' ng-model='modalOptions.group.state' id='InState' placeholder='20 char max'/>
+		</div>
+
+		<div style='width:30%; display: inline-block'>
+			<label for='InZip'>Zip/Postal Code</label>
+			<input type='text' ng-model='modalOptions.group.zip' id='InZip' placeholder='ten char max'/>
+		</div>
+
+		<div style='width:30%; display: inline-block'>
+			<label for='InCountry'>Country</label>
+			<input type='text' ng-model='modalOptions.group.country' id='InCountry' placeholder='two char max' value='US'/>
+		</div>
+	</div>
 </div>
-<div class="modal-footer">
-    <button type="button" class="btn" data-ng-click="modalOptions.close()">
+
+<div class='modal-footer'>
+    <button type="button" class='btn' data-ng-click='modalOptions.close()'>
         Cancel
     </button>
-    <button class="btn btn-primary" data-ng-click="modalOptions.ok(modalOptions.group)">
+    <button class='btn btn-primary' data-ng-click='modalOptions.ok(modalOptions.group)'>
         {{modalOptions.actionButtonText}}
     </button>
 </div>
