--- a/modules/contacts/contact-modal.htm
+++ b/modules/contacts/contact-modal.htm
@@ -1,51 +1,57 @@
 <style>
-    label {width: 30px}
-    div.form-group input {width: 90%}
+    label {width: 68px}
+    div.form-group input {width: 95%}
+	input {padding-left: 2px}
 </style>
 
-<div class="modal-header">
-    <h3 ng-bind="modalOptions.title"></h3>
+<div class='modal-header'>
+    <h3 ng-bind='modalOptions.title'></h3>
 </div>
 
-<div class="modal-body">
+<div class='modal-body'>
 	<div class='form-group'>
-		<label for='InNick'>Nick</label>
-		<input type='text' ng-model='modalOptions.contact.nick' id='InNick' placeholder='Enter nick name'/>
-	
+		<div style='width:47%; display: inline-block'>
+			<label for='InNick'>Nick</label>
+			<input type='text' ng-model='modalOptions.contact.nick' id='InNick' placeholder='nick name'/>
+		</div>
+		<div style='width:50%; display: inline-block'>
+			<label for='InFname'>First Name</label>
+			<input type='text' ng-model='modalOptions.contact.fname' id='InFname' placeholder='first name'/>
+		</div>
 	</div>
+
 	<div class='form-group'>
-		<label for='InFname'>First</label>
-		<input type='text' ng-model='modalOptions.contact.fname' id='InFname' placeholder='Enter first name'/>
+		<div style='width:66%; display: inline-block'>
+			<label for='InLname'>Last Name</label>
+			<input type='text' ng-model='modalOptions.contact.lname' id='InLname' placeholder='last name'/>
+		</div>
+		<div style='width:30%; display: inline-block'>
+			<label for='InBorn'>Born</label>
+			<input type='date' ng-model='modalOptions.contact.born' id='InBorn' placeholder='mm/DD/yyyy'/>
+		</div>
 	</div>
+
 	<div class='form-group'>
-		<label for='InLname'>Last</label>
-		<input type='text' ng-model='modalOptions.contact.lname' id='InLname' placeholder='Enter last name'/>
-	</div>
-	<div class='form-group'>
-		<label for='InBorn'>Born</label>
-		<input type='date' ng-model='modalOptions.contact.born' id='InBorn' placeholder='Enter first name'/>
+		<label for='InPix'>Head Shot</label>
+		<input id='InPix' type='text' ng-model='modalOptions.contact.pix' placeholder='file name of contact headshot'/>
 	</div>
 	
 	<div class='form-check form-check-inline'>
-		<label for='InSex'>Sex</label>
-		<input id='InSex' type='radio' class='validate' ng-model='modalOptions.contact.sex' value='Male'/> Male
-		<input id='InSex' type='radio' class='validate' ng-model='modalOptions.contact.sex' value='Female'/> Female
-	</div>
-	<div class='form-group'>
-		<label for='InPix'>Pix</label>
-		<input id='InPix' type='text' ng-model='modalOptions.contact.pix' placeholder='Enter file name of contact headshot'/>
+		<label for='InSex'>Gender</label>
+		<input type='radio' id='InSex' class='validate' ng-model='modalOptions.contact.sex' value='Male'/> Male
+		<input type='radio' id='InSex' class='validate' ng-model='modalOptions.contact.sex' value='Female'/> Female
 	</div>
 	<div class='form-group'>
 		<label for='InTags'>Tags</label>
-		<input id='InTags' type='text' ng-model='modalOptions.contact.tags' placeholder='Enter tags (uHHS ePB aELM nFOX rDiG oNXT)'/>
+		<input id='InTags' type='text' ng-model='modalOptions.contact.tags' placeholder='uHHS ePB aELM nFOX rDiG oNXT'/>
 	</div>
 </div>
 
-<div class="modal-footer">
-    <button type="button" class="btn" data-ng-click="modalOptions.close()">
+<div class='modal-footer'>
+    <button type='button' class='btn' data-ng-click='modalOptions.close()'>
         Cancel
     </button>
-    <button class="btn btn-primary" data-ng-click="modalOptions.ok(modalOptions.group)">
+    <button class='btn btn-primary' data-ng-click='modalOptions.ok(modalOptions.group)'>
         {{modalOptions.actionButtonText}}
     </button>
 </div>
