stylized Add Contact

--- a/modules/contacts/contact-modal.htm
+++ b/modules/contacts/contact-modal.htm
@@ -11,12 +11,12 @@
 <div class='modal-body'>
 	<div class='form-group'>
 		<div style='width:47%; display: inline-block'>
-			<label for='InNick'>Nick</label>
-			<input type='text' ng-model='modalOptions.contact.nick' id='InNick' placeholder='nick name'/>
-		</div>
-		<div style='width:50%; display: inline-block'>
 			<label for='InFname'>First Name</label>
 			<input type='text' ng-model='modalOptions.contact.fname' id='InFname' placeholder='first name'/>
+		</div>
+		<div style='width:50%; display: inline-block'>
+			<label for='InNick'>Nick</label>
+			<input type='text' ng-model='modalOptions.contact.nick' id='InNick' placeholder='nick name'/>
 		</div>
 	</div>
 
@@ -27,7 +27,7 @@
 		</div>
 		<div style='width:30%; display: inline-block'>
 			<label for='InBorn'>Born</label>
-			<input type='date' ng-model='modalOptions.contact.born' id='InBorn' placeholder='mm/DD/yyyy'/>
+			<input type='date' ng-model='modalOptions.contact.born' id='InBorn' placeholder='mm-dd-yyyy'/>
 		</div>
 	</div>
 
