--- a/modules/contacts/addContact.htm
+++ b/modules/contacts/addContact.htm
@@ -1,24 +1,24 @@
 <style>
     label {width: 30px}
     div.form-group input {width: 90%}
+	input {padding-left: 1px}
 </style>
 
 <div class='form-group'>
     <label for='InNick'>Nick</label>
-    <input type='text' ng-model='contact.nick' id='InNick' placeholder='Enter nick name'/>
-
+    <input type='text' ng-model='contact.nick' id='InNick' placeholder='nick name'/>
 </div>
 <div class='form-group'>
     <label for='InFname'>First</label>
-    <input type='text' ng-model='contact.fname' id='InFname' placeholder='Enter first name'/>
+    <input type='text' ng-model='contact.fname' id='InFname' placeholder='first name'/>
 </div>
 <div class='form-group'>
     <label for='InLname'>Last</label>
-    <input type='text' ng-model='contact.lname' id='InLname' placeholder='Enter last name'/>
+    <input type='text' ng-model='contact.lname' id='InLname' placeholder='last name'/>
 </div>
 <div class='form-group'>
     <label for='InBorn'>Born</label>
-    <input type='date' ng-model='contact.born' id='InBorn' placeholder='Enter first name'/>
+    <input type='date' ng-model='contact.born' id='InBorn' placeholder='mm-dd-yyyy'/>
 </div>
 
 <div class='form-check form-check-inline'>
@@ -28,11 +28,11 @@
 </div>
 <div class='form-group'>
     <label for='InPix'>Pix</label>
-    <input id='InPix' type='text' ng-model='contact.pix' placeholder='Enter file name of contact headshot'/>
+    <input id='InPix' type='text' ng-model='contact.pix' placeholder='file name of contact headshot'/>
 </div>
 <div class='form-group'>
     <label for='InTags'>Tags</label>
-    <input id='InTags' type='text' ng-model='contact.tags' placeholder='Enter tags (uHHS ePB aELM nFOX rDiG oNXT)'/>
+    <input id='InTags' type='text' ng-model='contact.tags' placeholder='uHHS ePB aELM nFOX rDiG oNXT)'/>
 </div>
 
-<button class='btn btn-primary' ng-click='addContact()'>Add Contact</button>
+<button class='btn btn-primary' ng-click='addContact()'>Create Contact</button>
