--- a/modules/contacts/contact-modal.htm
+++ b/modules/contacts/contact-modal.htm
@@ -51,7 +51,7 @@
     <button type='button' class='btn' data-ng-click='modalOptions.close()'>
         Cancel
     </button>
-    <button class='btn btn-primary' data-ng-click='modalOptions.ok(modalOptions.group)'>
+    <button class='btn btn-primary' data-ng-click='modalOptions.ok(modalOptions.contact)'>
         {{modalOptions.actionButtonText}}
     </button>
 </div>
