--- a/modules/contacts/viewContacts.htm
+++ b/modules/contacts/viewContacts.htm
@@ -1,4 +1,23 @@
 <div class="search-filter">
+    <form>
+        <div class="input-group" style='margin-top:5px'>
+            <input type="text"
+                   class="form-control"
+                   ng-class="{'searchError': nc.customSearchError}"
+                   ng-change="nc.customSearchError=false"
+                   ng-model="nc.customSearchCriteria" placeholder="Search ..."
+                   spellcheck="false"
+                   title='note: org: rel[ation]: info: ginfo: email: url: last: first: ph: sp[ouse]: st[ate]: city: tag: str[eet]:'/>
+            <span class="input-group-btn">
+                <button class="btn btn-flat" id="search-btn" name="search" ng-click="customSearch()" onclick="return false;" type="submit">
+                    <i class="fa fa-search"></i>
+                </button>
+            </span>
+        </div>
+    </form>
+</div>
+
+<div class="search-filter">
     <div class="input-group">
         <input type="text" class="form-control" placeholder="Filter" ng-model="searchText">
         <div class="input-group-addon">
@@ -6,6 +25,7 @@
         </div>
     </div>
 </div>
+
 <ul class="media-list">
     <li class="media" ng-repeat="contact in contacts | filterBy: ['fname', 'lname', 'nick', 'tags']: searchText">
 		<div class="media-left">
